--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -66,9 +66,9 @@ a {
 }
 
 .container-fluid {
-	max-width: 1920px;
-	margin: 0 auto;
-	padding: 0 10px;
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 /* ============= end global styles========== */
@@ -443,7 +443,7 @@ a {
 .container-fluid {}
 
 .title {
-  font-family: Bubblegum Sans,cursive;
+  font-family: Bubblegum Sans, cursive;
   font-size: 40px;
   line-height: 46px;
   color: #2d3054;
@@ -532,109 +532,191 @@ a {
 
 
 
-
-
-
-.blog {
-  margin-bottom: 120px;
+.banner {
+  margin: 77px 0 35px;
 }
 
-/* .blog__title {
-  color: #363838;
-  font-size: 35px;
-  line-height: 51px;
-  margin-bottom: 25px;
+.banner__items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+
+.banner__item {
+  /* position: relative; */
   position: relative;
-  text-align: center;
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+
+.banner__item-image {
+  transition: all 3s cubic-bezier(0, 0, .1, 1);
+  -webkit-transition: all 3s cubic-bezier(0, 0, .1, 1);
+  -moz-transition: all 3s cubic-bezier(0, 0, .1, 1);
+  -ms-transition: all 3s cubic-bezier(0, 0, .1, 1);
+  -o-transition: all 3s cubic-bezier(0, 0, .1, 1);
+  transition-delay: .1s;
+  position: relative;
+  width: 100%;
+}
+
+.banner__item-image__link {
+  display: block;
+  position: relative;
+  transition: opacity .5s;
+}
+
+.banner__item-image__link::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  background-color: #00000026;
+  z-index: 1;
+}
+
+.banner__item-info {
+  position: absolute;
+  left: 35px;
+  bottom: 45px;
+  width: 37%;
+  z-index: 2;
+}
+
+.banner__item-title {
+  font-family: Bubblegum Sans, cursive;
+  font-size: 40px;
+  line-height: 42px;
+  color: #fff;
+  font-weight: 400;
+}
+
+.banner__item-link {
+  display: inline-block;
+  padding: 10px 38px;
+  border-radius: 22px;
+  background-color: #F94073;
+  color: #fff;
+  border: none;
+  transition: .4s;
+}
+
+.banner__item-link:hover {
+  background-color: #dc3545;
+}
+
+
+
+.featured-products {
+  padding-bottom: 70px;
+}
+
+.featured-products__title {
+  padding-top: 87px;
+  margin-top: 60px;
+  margin-bottom: 36px;
+  font-family: Bubblegum Sans,cursive;
+  font-size: 40px;
+  line-height: 46px;
+  color: #2d3054;
+  position: relative;
+  padding-bottom: 15px;
+}
+
+/* .featured-products__inner {
+  display: flex;
 } */
 
-.blog__text {
-  max-width: 570px;
-  margin: 0 auto 30px;
+.featured-products__tabs-container {
+  width: calc(25% - 15px);
+  margin-right: 30px;
+  background-color: #2d3054;
+  border-radius: 3px;
+  padding: 0;
+  margin-bottom: 22px;
+  max-height: 465px;
 }
 
-.blog__items {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
+.featured-products__tabs-list {
+  padding: 20px;
 }
 
-.blog__item {
-  max-width: 370px;
-  border: 1px solid #ececec;
-}
-
-.blog__item:hover:hover {
-  box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
-  border: none;
-}
-
-.blog__item:hover:hover .blog__item-link {
-  color: #ff6f00;
-}
-
-.blog__item-imglink img {
-  height: 288px;
-  width: 100%;
-  object-fit: cover;
-}
-
-.blog__item-box {
-  padding: 30px 40px;
-}
-
-.blog-box {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.blog-box__author {
-  padding-left: 30px;
-  position: relative;
-  color: #8d8d8d;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.blog-box__date {
-  padding-left: 30px;
-  position: relative;
-  color: #8d8d8d;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.blog-box__author::before {
-  background-image: url(../icons/blog-user.svg);
-}
-
-.blog-box__date::before {
-  background-image: url(../icons/blog-time.svg);
-}
-
-.blog-box__author::before,
-.blog-box__date::before {
-  content: "";
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 0;
-  top: 4px;
-}
-
-.blog__item-titlelink,
-.blog__item-link {
-  color: #8d8d8d;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.blog__item-title {
-  color: #29282d;
+.featured-products__tabs-list__item {
   font-size: 22px;
-  margin-bottom: 20px;
+  line-height: 26px;
+  color: #fff;
+  font-family: Bubblegum Sans,cursive;
+  font-weight: 400;
+  padding: 13px 12px 13px 20px;
+  border-radius: 50px;
+  margin-bottom: 10px;
+  transition: .6s;
 }
+
+.featured-products__items {
+  width: calc(75% - 15px);
+}
+
+.featured-products__tabs-btn {
+  border: none;
+  background-color: inherit;
+  font-size: 22px;
+  line-height: 26px;
+  color: #fff;
+  font-family: Bubblegum Sans,cursive;
+  font-weight: 400;
+  padding: 13px 12px 13px 20px;
+  border-radius: 50px;
+  margin-bottom: 10px;
+  transition: all .3s;
+  cursor: pointer;
+}
+
+.featured-products__tabs-btn:hover {
+  display: inline-block;
+  padding: 13px 12px 13px 20px;
+  border-radius: 50px;
+  margin-bottom: 10px;
+  background-color: #F94073;
+  color: #fff;
+  border: none;
+  transition: .4s;
+}
+
+.featured-products__item {
+  /* display: flex;
+  align-items: center; */
+}
+
+
+
+
+[aria-selected="true"] {
+  display: inline-block;
+  padding: 13px 12px 13px 20px;
+  border-radius: 50px;
+  margin-bottom: 10px;
+  background-color: #F94073;
+  color: #fff;
+  border: none;
+  transition: .4s;
+} 
+
+
+.tabs-container {
+  display: flex;
+} 
+
+/* .tabs__panels-item {
+  display: flex;
+} */
+
+
 
 
 /* ==============страница с каталогом================ */
