--- a/sunline/templates/base.html
+++ b/sunline/templates/base.html
@@ -63,45 +63,56 @@
                                 </form>
                             </div>
                         </li>
-                        <li class="menu__list-item">
+                        <li class="menu__list-item menu__list-link--dropdown">
                             <a class="menu__list-link" href="">
                                 <img src=" {% static 'deps/icons/user.svg' %} " alt="">
+                            </a>
+                            <ul class="submenu">
+                                {% if not user.is_authenticated %}
+                                    <li class="submenu__item">
+                                        <a class="submenu__item-link" href="{% url "user:login" %}">Войти</a>
+                                    </li>
+                                {% else %}
 
-                            </a>
-                        </li>
-                        <li class="menu__list-item">
-                            <a class="menu__list-link" href="">
-                                <img src=" {% static 'deps/icons/heart.svg' %} " alt="">
-                                <span class="menu-list__num">3</span>
-                            </a>
-                        </li>
-                        <li class="menu__list-item">
-                            <a class="menu__list-link" href="">
-                                <img src=" {% static 'deps/icons/cart.svg' %} " alt="">
-                                <span class="menu-list__num">3</span>
-                            </a>
-                        </li>
-                    </ul>
+                        <li class="submenu__item"><a class="submenu__item-link" href="{% url "user:profile" %}">Личный кабинет</a></li>
+                        {% if user.is_admin or user.is_staff %}
+                            <li class="submenu__item"><a class="submenu__item-link" href="{% url "admin:index" %}">Админ панель</a></li>
+                        {% endif %}
+                        <li class="submenu__item"><a class="submenu__item-link" href="{% url "user:logout" %}">Выйти</a></li>
+                    {% endif %}
+                    </li>
+                </ul>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="">
+                            <img src=" {% static 'deps/icons/heart.svg' %} " alt="">
+                            <span class="menu-list__num">3</span>
+                        </a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="">
+                            <img src=" {% static 'deps/icons/cart.svg' %} " alt="">
+                            <span class="menu-list__num">3</span>
+                        </a>
+                    </li>
                 </nav>
             </div>
         </div>
     </header>
 
-            {% include "includes/notification.html" %}
-            {% block block__content %}{% endblock  %}
-
-            
-        </main>
+    <main class="main">
+        {% include "includes/notification.html" %}
+        {% block block__content %}{% endblock  %}
+    </main>
         <footer class="footer">
  
         </footer>
     </div>
+    <script src="{% static "deps/js/jquery.mixitup.min.js" %}"></script>  
     <script src="{% static "deps/js/jquery/jquery-3.7.0.min.js" %}"></script>
     <script src="{% static "deps/js/jquery/slick.min.js" %}"></script>
     <script src="{% static "deps/js/jquery-events.js" %}"></script>
     <script src="{% static "deps/js/jquery-ajax.js" %}"></script>
     <script src="{% static "deps/js/fancybox.umd.js" %}"></script>
-    <script src="{% static "deps/js/jquery.mixitup.min.js" %}"></script>  
     <script src="{% static "deps/js/bootstrap/bootstrap.bundle.min.js" %}"></script>
     <script src="{% static "deps/js/main.js" %}"></script>
 </body>
