--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -620,7 +620,7 @@ a {
   padding-top: 87px;
   margin-top: 60px;
   margin-bottom: 36px;
-  font-family: Bubblegum Sans,cursive;
+  font-family: Bubblegum Sans, cursive;
   font-size: 40px;
   line-height: 46px;
   color: #2d3054;
@@ -650,7 +650,7 @@ a {
   font-size: 22px;
   line-height: 26px;
   color: #fff;
-  font-family: Bubblegum Sans,cursive;
+  font-family: Bubblegum Sans, cursive;
   font-weight: 400;
   padding: 13px 12px 13px 20px;
   border-radius: 50px;
@@ -668,7 +668,7 @@ a {
   font-size: 22px;
   line-height: 26px;
   color: #fff;
-  font-family: Bubblegum Sans,cursive;
+  font-family: Bubblegum Sans, cursive;
   font-weight: 400;
   padding: 13px 12px 13px 20px;
   border-radius: 50px;
@@ -705,18 +705,113 @@ a {
   color: #fff;
   border: none;
   transition: .4s;
-} 
+}
 
 
 .tabs-container {
   display: flex;
-} 
+}
 
 /* .tabs__panels-item {
   display: flex;
 } */
 
 
+.new-arrivals {
+  margin: 88px 0 34px;
+}
+
+
+.new-arrivals__title {
+  padding-top: 87px;
+  margin-top: 60px;
+  margin-bottom: 36px;
+  font-family: Bubblegum Sans, cursive;
+  font-size: 40px;
+  line-height: 46px;
+  color: #2d3054;
+  position: relative;
+  padding-bottom: 15px;
+}
+
+.new-arrivals__inner {}
+
+.new-arrivals__items {
+  display: grid;
+  grid-template-columns: repeat(3, 2fr);
+  gap: 25px;
+}
+
+.new-arrivals__item {
+  border: 1px solid #eee;
+  padding: 15px;
+  border-radius: 3px;
+  transition: all .3s;
+  display: flex;
+}
+
+.new-arrivals__item:hover {
+  border: 1px solid #dc3545;
+}
+
+.new-arrivals__item-image {
+  width: 140px;
+  min-width: 140px;
+}
+
+.new-arrivals__item-label {
+  font-size: 92.307%;
+  font-weight: 500;
+  text-transform: uppercase;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.new-arrivals__item-info {
+  width: 100%;
+  padding-left: 20px;
+  position: relative;
+}
+
+.new-arrivals__item-vendor {
+  color: #777;
+  font-size: 92.307%;
+  transition: .1s;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+
+.new-arrivals__item-name {
+  font-family: "Poppins", sans-serif;
+  font-size: 13px;
+  line-height: 22px;
+  font-weight: 500;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: all .3s;
+}
+
+.new-arrivals__item-name:hover {
+  color: #dc3545;
+}
+
+.new-arrivals__item-price_container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.new-arrivals__item-new__price {
+  font-family: "Poppins", sans-serif;
+  font-size: 138.461%;
+  color: #F94073;
+  font-weight: 700;
+  padding: 5px 0;
+}
+
+.new-arrivals__item-old__price {}
 
 
 /* ==============страница с каталогом================ */
