added section choose

--- a/sunline/main/templates/main/index.html
+++ b/sunline/main/templates/main/index.html
@@ -348,4 +348,69 @@
       </div>
     </div>
   </section>
+  <section class="contact-banner">
+    <div class="container">
+      <div class="contact-banner__inner">
+        <div class="contact-banner__content">
+
+          <div class="contact-banner__phone">
+            <p class="contact-banner__phone-title">Phone</p>
+            <a href="" class="contact-banner__phone-value">            
+              (+084) 859 481 3614
+            </a>
+          </div>
+
+          <div class="contact-banner__center">
+            <img class="contact-banner__center-image" src=" {% static 'deps/images/contact-banner-image.webp' %} " alt="">
+          </div>
+
+          <div class="contact-banner__email">
+            <p class="contact-banner__email-title">Email</p>
+            <a href="" class="contact-banner__email-value">
+              bzopets@example.com
+            </a>
+          </div>
+
+
+      </div>
+    </div>
+  </section>
+  <section class="choose">
+    <div class="choose__inner">
+      <div class="container">
+        <div class="choose__content">
+          <h3 class="choose__title">Why Choose Us</h3>
+          <ul class="choose__items">
+            <li class="choose__item">
+              <p class="choose__item-title">Quick Response</p>
+              <p class="choose__item-descr">
+                It is a long established fact that a reader 
+                will be distracted by the readable content 
+                of a page when looking at its layout.since 
+                when an unknown printer
+              </p>
+            </li>
+            <li class="choose__item">
+              <p class="choose__item-title">Experienced</p>
+              <p class="choose__item-descr">
+                We denounce with righteous indignation 
+                and dislike men who are so beguiled 
+                and demoralized by the charms of 
+                pleasure of the moment blinded
+              </p>
+            </li>
+            <li class="choose__item">
+              <p class="choose__item-title">Flexible Payment</p>
+              <p class="choose__item-descr">
+                Accusamus et iusto odio dignissimos 
+                ducimusa blanditiis praesentium voluptatum 
+                deleno atque corrupti quos dolores quas 
+                molestias except occaecati
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
