--- a/sunline/main/templates/main/index.html
+++ b/sunline/main/templates/main/index.html
@@ -413,4 +413,60 @@
       </div>
     </div>
   </section>
+  <section class="partners">
+    <div class="container">
+      <h3 class="partners__title">Our Partners</h3>
+      <div class="partners__inner">
+        <div class="partners__items">
+          <div class="banner__item">
+            <a class="banner__item-link" href=""><img src=" {% static 'deps/images/partners/partner-1.avif' %} " alt=""></a>
+          </div>
+          <div class="banner__item">
+            <a class="banner__item-link" href="">
+              <img src=" {% static 'deps/images/partners/partner-2.avif' %} " alt=""></a>
+          </div>
+          <div class="banner__item">
+            <a class="banner__item-link" href="">
+              <img src=" {% static 'deps/images/partners/partner-3.avif' %} " alt="">
+            </a>
+          </div>
+          <div class="banner__item">
+            <a class="banner__item-link" href="">
+              <img src=" {% static 'deps/images/partners/partner-4.avif' %} " alt="">
+            </a>
+          </div>
+          <div class="banner__item">
+            <a class="banner__item-link" href="">
+              <img src=" {% static 'deps/images/partners/partner-5.avif' %} " alt="">
+            </a>
+          </div>
+          <div class="banner__item">
+            <a class="banner__item-link" href="">
+              <img src=" {% static 'deps/images/partners/partner-6.avif' %} " alt="">
+            </a>
+          </div>
+          <div class="banner__item">
+            <a class="banner__item-link" href="">
+              <img src=" {% static 'deps/images/partners/partner-7.avif' %} " alt="">
+            </a>
+          </div>
+          <div class="banner__item">
+            <a class="banner__item-link" href="">
+              <img src=" {% static 'deps/images/partners/partner-8.avif' %} " alt="">
+            </a>
+          </div>
+          <div class="banner__item">
+            <a class="banner__item-link" href="">
+              <img src=" {% static 'deps/images/partners/partner-9.avif' %} " alt="">
+            </a>
+          </div>
+          <div class="banner__item">
+            <a class="banner__item-link" href="">
+              <img src=" {% static 'deps/images/partners/partner-10.avif' %} " alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
