--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -57,6 +57,9 @@ a {
 /* ============= end reset styles========== */
 
 
+body {
+  font-family: "Poppins", sans-serif;
+}
 
 /* global styles */
 .container {
@@ -179,6 +182,131 @@ a {
 
 /* ============= end header styles========== */
 
+
+
+
+
+
+
+/* footer start */
+
+.footer {
+  background-color: #2d3054;
+  color: #d0d0d6;
+}
+
+.footer-top {
+  padding: 78px 0 40px;
+}
+
+.footer-top__items {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.footer__contact {}
+
+.footer__contact-title,
+.footer__links-title,
+.footer-newsletter__title {
+  margin-bottom: 22px;
+  font-family: Bubblegum Sans,cursive;
+  color: #fff;
+  font-size: 26px;
+  line-height: 28px;
+}
+
+.footer__contact-address {
+  max-width: 400px;
+  margin-bottom: 25px;
+}
+
+.footer__contact-email {
+  margin-bottom: 35px;
+  display: flex;
+}
+
+.footer__contact-email__name {
+  margin-right: 10px;
+}
+
+.footer__contact-email__link {
+  color: #f94073;
+}
+
+.footer__contact-call {
+  display: flex;
+  gap: 10px;
+}
+
+.footer__contact-call__image {}
+
+.footer__contact-call__info {}
+
+.footer__contact-call__title {
+  color: #fff;
+}
+
+.footer__contact-call__phone {
+  color: #dc3545;
+  font-family: Bubblegum Sans,cursive;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.footer-top__links {}
+
+.footer__links-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer__links-item {}
+
+.footer__links-item-link {
+  color: #fff;
+  transition: all .3s;
+}
+
+.footer__links-item-link:hover {
+  color: #dc3545;
+}
+
+.footer-newsletter {}
+
+.footer-newsletter__text {
+  max-width: 400px;
+  margin-bottom: 25px;
+}
+
+.footer-form__container {}
+
+.form {
+  display: flex;
+}
+
+.footer-form__input {
+  height: 44px;
+  border-radius: 22px 0 0 22px;
+  border: none;
+  width: 100%;
+  padding: 10px 18px;
+}
+
+.footer-form__btn {
+  background-color: #F94073;
+  min-width: unset;
+  height: 44px;
+  padding: 0 30px;
+  border-radius: 0 22px 22px 0;
+  transition: .1s;
+  color: #fff;
+  border: none;
+}
+
+/* ============= end footer styles========== */
 
 
 
@@ -883,7 +1011,7 @@ a {
 
 .choose__title {
   padding-top: 15px;
-  font-family: Bubblegum Sans,cursive;
+  font-family: Bubblegum Sans, cursive;
   font-size: 40px;
   line-height: 46px;
   color: #fff;
@@ -906,7 +1034,7 @@ a {
 .choose__item-title {
   font-size: 22px;
   line-height: 26px;
-  font-family: Bubblegum Sans,cursive;
+  font-family: Bubblegum Sans, cursive;
   margin-bottom: 10px;
 }
 
@@ -915,6 +1043,67 @@ a {
   font-weight: 400;
   font-size: 13px;
   line-height: 19px;
+}
+
+
+.partners {
+  margin: 88px 0 34px;
+}
+
+.partners__title {
+  font-family: Bubblegum Sans, cursive;
+  font-size: 40px;
+  line-height: 46px;
+  color: #2d3054;
+  position: relative;
+  padding-bottom: 15px;
+}
+
+.partners__inner {}
+
+.partners__items {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.banner__item {
+  margin-bottom: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.banner__item-link {
+  position: relative;
+  border-radius: 3px;
+  overflow: hidden;
+  border: 1px solid #eee;
+  border-radius: 3px;
+  text-align: center;
+  position: relative;
+  padding: 0;
+  display: block;
+  transition: all .3s;
+}
+
+.banner__item-link:hover {
+  border: 1px solid #dc3545;
+}
+
+.banner__item-link::before {
+  transition: all .4s;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 50%;
+  left: 50%;
+  margin-left: -50%;
+  top: 25%;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 0 1px;
 }
 
 
